# project_analysis

OpenNefia/architecture/: 01_project_overview.md  03_ecs_system.md  (+12 more)
agent_server/: .gitignore  architecture.md  extra.md  plan.md  pyproject.toml  server.py  task.md  thinking.md
agent_server/config/: routes.yaml
agent_server/core/: orchestrator.py  registry.py  router.py
agent_server/data/: tasks.db
agent_server/docs/: adding-modules.md
agent_server/models/: envelope.py
agent_server/modules/: base.py  ollama_connector.py
agent_server/storage/: sqlite_store.py
ai_client/: keyboard_listener.py  voice_recorder.py
godot/: GEMINI.md
hy/: GEMINI.md
lispc/: GEMINI.md  cc.lisp
luanti/: GEMINI.md
mylang/: .gitignore  CMakeLists.txt  GEMINI.md  README_SPEC.md  architecture.md  log.txt  output.cpp  readme.md  test_output.txt
mylang/include/: environment.hpp  evaluator.hpp  lexer.hpp  parser.hpp  value.hpp
mylang/src/: evaluator.cpp  lexer.cpp  main.cpp  parser.cpp  value.cpp
mylang/tests/: comparison_suite.mylang  comprehensive_test.mylang  eval_test.mylang  exception_test.mylang  io_test.mylang  lexer_test.mylang  macro_backquote_test.mylang  meta_test.mylang  mixed_test.mylang  multiline_string_test.mylang  parser_suite.mylang  parser_test.mylang  simple_test.mylang  stdlib_test.mylang  string_space_test.mylang
nlisp/: eval.c  eval.h  list.c  list.h  main.c  parser.c  parser.h  stack.c  stack.h  test.lisp  tokenizer.c  tokenizer.h  util.c  util.h
openstartbound/: ARCHITECTURE.md
t-engine/: CLAUDE.md  CLAUDE_saved.md
veloren/: GEMINI.md
(+596 files in other folders)
